--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -70,5 +70,8 @@
   },
   "popupHotstarCTA": {
     "message": "Go to hotstar.com"
+  },
+  "popupFontPositionOptionTitle": {
+    "message": "Position (From Bottom)"
   }
 }
